Make sure tables dont cause overflow

--- a/sortable-table/index.css
+++ b/sortable-table/index.css
@@ -1,5 +1,12 @@
+sortable-table {
+	display: block;
+	overflow-x: auto;
+}
+
 table {
 	border-collapse: collapse;
+	max-inline-size: 100%;
+	overflow-x: auto;
 }
 
 caption {
